Fixes header layout shift (#873)
* fixes cls

* fixes better

--- a/styles/index.css
+++ b/styles/index.css
@@ -252,7 +252,7 @@ Algolia overrides
 Need the css for focus management but they append theming, which we don't want
 */
 .aa-Form {
-  border: 0.5px solid var(--tgph-gray-6) !important;
+  border: 1px solid var(--tgph-gray-4) !important;
   border-radius: var(--tgph-rounded-2) !important;
 }
 
@@ -260,4 +260,9 @@ Need the css for focus management but they append theming, which we don't want
   font: unset !important;
   font-size: 12px !important;
   height: auto !important;
+  color: var(--tgph-gray-10) !important;
+}
+
+.aa-Input::placeholder {
+  color: var(--tgph-gray-8) !important;
 }
